// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserSerializer : getAllUsers : should return array with info 1`] = `
{
  "data": {
    "attributes": {
      "countOfUsers": {
        "attributes": {
          "primitive": 2,
        },
        "id": 0,
        "type": "Primitive",
      },
      "users": [
        {
          "attributes": {
            "ava": null,
            "email": "111@11.1",
            "fullName": undefined,
            "lastName": "bbbb",
            "login": "Artem",
            "status": "1",
          },
          "id": 1,
          "type": "User",
        },
        {
          "attributes": {
            "ava": null,
            "email": "111@11.1",
            "fullName": undefined,
            "lastName": "bbbb",
            "login": "Artem",
            "status": "1",
          },
          "id": 1,
          "type": "User",
        },
      ],
    },
    "id": 0,
    "type": "Users",
  },
  "links": {
    "self": {},
  },
}
`;

exports[`UserSerializer : getOne : should return info about user 1`] = `
{
  "data": {
    "attributes": {
      "ava": null,
      "email": "111@11.1",
      "fullName": undefined,
      "lastName": "bbbb",
      "login": "Artem",
      "status": "1",
    },
    "id": 1,
    "type": "User",
  },
  "links": {
    "self": {},
  },
}
`;
